# adorbents_isotherms_computations_tensorflow

./: .gitignore  Data_new.ipynb  MLP.ipynb  Statistic.ipynb  pyproject.toml
.ipynb_checkpoints/: Data_new-checkpoint.ipynb  MLP-checkpoint.ipynb  Test-checkpoint.ipynb
